--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "framer-motion": "^11.1.9",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
@@ -45,5 +46,6 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/papaparse": "^5.3.14"
-  }
+  },
+  "proxy": "https://naveropenapi.apigw.ntruss.com"
 }
